# openclaw

./: .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  npm-shrinkwrap.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  taxonomy.yaml  tsconfig.json  tsdown.config.ts
.github/: labeler.yml  retired-sticky-disks.json
apps/linux/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/linux/src-tauri/permissions/: quickchat.toml
apps/linux/src-tauri/permissions/autogenerated/: build_info.toml  check_for_updates.toml  open_release_page.toml  relaunch.toml  updater_ready.toml
apps/linux/src-tauri/src/: gateway.rs  gateway_device_identity.rs  gateway_ws.rs  main.rs  notify.rs  pending_approvals.rs  quickchat.rs  tray.rs  updater.rs
config/: knip.all-exports.config.ts  knip.config.ts  knip.scripts-exports.config.ts  max-lines-baseline.txt
docs/: agent-runtime-architecture.md  ci.md  docs.json  docs_map.md
extensions/: music-generation-providers.live.test.ts  tsconfig.package-boundary.paths.json  video-generation-providers.live.test.ts
scripts/: AGENTS.md  android-app-i18n.ts  android-screenshots.sh  anthropic-prompt-probe.ts  apple-app-i18n.ts  auth-monitor.sh  bench-transcript-cursors.ts  build-all.d.mts  build-all.mjs  build-diffs-viewer-runtime.mjs  build-discord-activity-sdk.d.mts  build-discord-activity-sdk.mjs  changed-lanes.mjs  check-changed.mjs  check-cli-startup-memory.mjs  check-control-ui-performance.mjs  check-database-first-legacy-stores.d.mts  check-database-first-legacy-stores.mjs  check-deadcode-exports.mjs  check-deadcode-unused-files.mjs  check-deprecated-api-usage.mjs  check-kysely-guardrails.mjs  check-native-state-schema-version.d.mts  check-native-state-schema-version.mjs  check-no-conflict-markers.d.mts  check-no-conflict-markers.mjs  check-no-deprecated-channel-access.ts  check-no-extension-test-core-imports.ts  check-no-monolithic-plugin-sdk-entry-imports.ts  check-package-patches.mjs  check-plugin-sdk-exports.mjs  check-protocol-since.mjs  check-script-declarations.d.mts  check-script-declarations.mjs  check-session-accessor-boundary.mjs  check-tsgo-core-boundary.mjs  (+103 more)
(+8025 files in other folders)
